# resource-fula-ordboken

./: .bumpversion.toml  .gitignore  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: release.yml  scheduled.yml  test.yml
src/karp_resource_fula_ordboken/: __init__.py  cli.py  text.py
src/resource_fula_ordboken/: __init__.py  cli.py  find_updates.py  fula_ord_converter.py  models.py  text.py  use_cases.py
src/resource_fula_ordboken/shared/: __init__.py  files.py
tests/: test_use_cases.py  test_version.py
